# ImitateSpringFramework

./: README.md  main.py  pyproject.toml  requirements.txt
framework/: __init__.py  build.py  check.py  default.py  library.py  load_dlc.py  load_src.py  main.py  public_modules.py  run.py
framework/dlc/: __init__.py  embed.py  langgraph.py  mybatis.py  web.py
src/: login.py
src/Controller/: __init__.py
src/Service/: __init__.py
